Added testing topics

--- a/style.css
+++ b/style.css
@@ -12,3 +12,11 @@ h1, h2, h3, h4, h5, h6 {
     background-color: rgb(52,53,65);
     font-weight: 700;
 }
+
+ol, ul {
+    margin: 15px 0;
+}
+
+li {
+    padding: 7px 0;
+}
