--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@ ol, ul {
 li {
     padding: 7px 0;
 }
+
+pre {
+    background-color: #000;
+    border-radius: 25px;
+    padding: 20px 0;
+    margin-bottom: 15px;
+}
